add login tests add swagger docs to signup, login
