# docs/swagger.json
@@ -151,6 +151,38 @@
                     }
                 }
             }
+        },
+        "/signup": {
+            "post": {
+                "description": "create token in a group",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "create jwt token",
+                "responses": {
+                    "200": {
+                        "description": "jwt token which you can use to request /api routings",
+                        "schema": {
+                            "type": "body"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/echo.HTTPError"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/echo.HTTPError"
+                        }
+                    }
+                }
+            }
         }
     },
     "definitions": {
